# Protobuf

./: CMakeLists.txt  README.md
UI/: mainwindow.ui
config/: ProtobufConfig.json
proto/: Message.proto
resources/: resources.qrc
src/: Logger.hpp  MemoryWorker.cpp  MemoryWorker.h  configuration.hpp  main.cpp  mainwindow.cpp  mainwindow.h
src/ipc/: message_dispatcher.cpp  message_dispatcher.h  socket.cpp  socket.h  socket_impl.cpp  socket_impl.h  tcp_server.cpp  tcp_server.h
src/ipc/dispatchers/: editor_dispatcher.cpp  editor_dispatcher.h  server_dispatcher.cpp  server_dispatcher.h
src/logging/: file_worker.hpp  logger.cpp  logger.h
